@@ -1174,6 +1174,90 @@ If TABLE is nil, `twittering-connection-type-table' is used in place of TABLE.
 		   (lambda (proc status)
 		     (apply sentinel proc status connection-info nil))))))))
 
+(defun twittering-send-http-request-with-default-sentinel (request additional-info func &optional clean-up-func)
+  "Send a HTTP request and return a subprocess object for the connection.
+REQUEST must be an alist that has the same keys as that generated by
+`twittering-make-http-request'.
+
+FUNC is called when a HTTP response has been received without errors.
+It is called with the current buffer containing the HTTP response (without
+HTTP headers). FUNC is called with four arguments: the process, a string
+describing the change, a connection-info generated by
+`twittering-make-connection-info', and a header-info generated by
+`twittering-get-response-header'.
+The connection-info also includes an alist ADDITIONAL-INFO.
+If FUNC returns non-nil and `twittering-buffer-related-p' is non-nil, the
+returned value is displayed as a message.
+
+CLEAN-UP-FUNC is called whenever the sentinel of the subprocess for the
+connection is called (as `set-process-sentinel').
+It is called with three arguments: the process, a string describing the change,
+and a connection-info generated by `twittering-make-connection-info'.
+They are the same as arguments for FUNC.
+When a HTTP response has been received, FUNC is called in advance of
+CLEAN-UP-FUNC. CLEAN-UP-FUNC can overwrite the message displayed by FUNC.
+
+If the subprocess has exited, the buffer bound to it is automatically killed
+after calling CLEAN-UP-FUNC.
+
+The method to perform the request is the same as
+`twittering-send-http-request'."
+  (lexical-let ((func func)
+		(clean-up-func clean-up-func))
+    (twittering-send-http-request
+     request nil
+     (lambda (proc status-str connection-info)
+       (let ((status (process-status proc))
+	     (buffer (process-buffer proc))
+	     (exit-status (process-exit-status proc))
+	     (pre-process-func
+	      (cdr (assq 'pre-process-buffer connection-info)))
+	     (mes nil))
+	 (unwind-protect
+	     (setq mes
+		   (cond
+		    ((null status)
+		     (format "Failure: process %s does not exist." proc))
+		    ((or (memq status '(run stop open listen connect))
+			 (not (memq status '(exit signal closed failed))))
+		     ;; If the process is running, FUNC is not called.
+		     nil)
+		    ((and (process-command proc)
+			  (not (= 0 exit-status)))
+		     ;; If the process abnormally exited,
+		     (format "Failure: %s exited abnormally (exit-status=%s)."
+			     (car (process-command proc)) exit-status))
+		    ((not (buffer-live-p buffer))
+		     (format "Failure: the buffer for %s is already killed."
+			     proc))
+		    (t
+		     (when (functionp pre-process-func)
+		       ;; Pre-process buffer.
+		       (funcall pre-process-func proc buffer connection-info))
+		     (let* ((header (twittering-get-response-header buffer))
+			    (header-info
+			     (and header
+				  (twittering-update-server-info header))))
+		       (with-current-buffer buffer
+			 (goto-char (point-min))
+			 (when (search-forward-regexp "\r?\n\r?\n" nil t)
+			   ;; delete HTTP headers.
+			   (delete-region (point-min) (match-end 0)))
+			 (apply func proc status-str connection-info
+				header-info nil))))))
+	   ;; unwind-forms
+	   (when (and mes (or (twittering-buffer-related-p)
+			      (twittering-account-authorization-queried-p)))
+	     ;; CLEAN-UP-FUNC can overwrite a message from the return value
+	     ;; of FUNC.
+	     (message "%s" mes))
+	   (when (functionp clean-up-func)
+	     (funcall clean-up-func proc status-str connection-info))
+	   (when (and (memq status '(exit signal closed failed))
+		      (buffer-live-p buffer)
+		      (not twittering-debug-mode))
+	     (kill-buffer buffer))))))))
+
 (defun twittering-start-http-session (method headers host port path parameters &optional noninteractive sentinel clean-up-sentinel)
   "METHOD    : http method
 HEADERS   : http request headers in assoc list
